manager (10.01.05) focal; urgency=medium

  * [Added charts automation](https://github.com/createstructure/manager-createstructure/issues/12)

 -- Castellani Davide <help@castellanidavide.it>  Sat, 12 Mar 2022 19:00:00 +1000

manager (10.01.04) focal; urgency=medium

  * [Add sponsorship button](https://github.com/createstructure/createstructure.github.io/issues/36)

 -- Castellani Davide <help@castellanidavide.it>  Wed, 5 Jan 2022 14:00:00 +1000

manager (10.01.03) focal; urgency=medium

  * [Fix installation on ARM archittecture](https://github.com/createstructure/manager-createstructure/issues/10)
  * [Fix minikube startup](https://github.com/createstructure/manager-createstructure/issues/11)

 -- Castellani Davide <help@castellanidavide.it>  Sat, 16 Dec 2021 12:10:00 +1000

manager (10.01.02) focal; urgency=medium

  * [beta => latest](https://github.com/createstructure/manager-createstructure/issues/9)

 -- Castellani Davide <help@castellanidavide.it>  Sat, 11 Dec 2021 23:15:00 +1000

manager (10.01.01) focal; urgency=medium

  * [Create a Docker management system](https://github.com/createstructure/manager-createstructure/issues/3)
  * [Create service for the new REST API](https://github.com/createstructure/manager-createstructure/issues/4)
  * [Create a routine to automate the Docker container management](https://github.com/createstructure/manager-createstructure/issues/5)
  * [Include install.sh in the manager-createstructure debian package](https://github.com/createstructure/manager-createstructure/issues/1)
  * [Convert functions into classes in all libraries](https://github.com/createstructure/manager-createstructure/issues/6)
  * [Improve documentation](https://github.com/createstructure/manager-createstructure/issues/7)

 -- Castellani Davide <help@castellanidavide.it>  Fri, 10 Dec 2021 22:00:00 +1000

manager (09.01.20) focal; urgency=medium

  * Try to change reboot waiting-time (3h => 6h)
