@@ -1,3 +1,10 @@
+manager (10.01.06) focal jammy; urgency=medium
+
+  * [Upgrade docs automation](https://github.com/createstructure/manager-createstructure/issues/14)
+  * [Ubuntu 22.04](https://github.com/createstructure/manager-createstructure/issues/15)
+
+ -- Castellani Davide <help@castellanidavide.it>  Tue, 27 Dec 2022 15:15:00 +1000
+ 
 manager (10.01.05) focal; urgency=medium
 
   * [Added charts automation](https://github.com/createstructure/manager-createstructure/issues/12)
